// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultRow/> .render renders correctly 1`] = `
<WithStyles(ListItem)
  dense={true}
  divider={false}
>
  <WithStyles(ListItemText)
    primary="Some stuff"
    secondary="More stuff"
  />
</WithStyles(ListItem)>
`;

exports[`<ResultRow/> .render renders with divider 1`] = `
<WithStyles(ListItem)
  dense={true}
  divider={true}
>
  <WithStyles(ListItemText)
    primary="Some stuff"
    secondary="More stuff"
  />
</WithStyles(ListItem)>
`;
